[package]
name = "coingecko_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coingecko = "0.1.0"
smol = "1.2"
isahc = { version = "0.9", default-features = false, features = ["http2", "text-decoding"]}
