[package]
name = "coingecko_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coingecko-rs = "1.0.0"
tokio = { version = "1", features = ["full"] }
axum = "0.4.8"
slog = "2.7.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
json = "0.12.4"
tracing = "0.1.32"
